feat(ui): add toc frame image and adjust styles for toc elements
Add frame image to table of contents section and update CSS to properly position and layer both frame and content elements

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <div id="section-1" class="section">
             <!-- 卷首语区 - 宽度约占总宽度的11.6% -->
             <div class="toc-element">
+                <img id="toc-frame-00" src="./assets/images/TableofContents/frame00.png" alt="目录框架00">
                 <img id="toc-element-00" src="./assets/images/TableofContents/Element00-1.png" alt="目录元素00">
             </div>
         </div>
