feat(ui): add dynamic element to table of contents and adjust styling
Position the new dynamic element at 25% from top and reduce its max-width to 10% for better visual balance

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
             <!-- 卷首语区 - 宽度约占总宽度的11.6% -->
             <div class="toc-element">
                 <img id="toc-frame-00" src="./assets/images/TableofContents/frame00.png" alt="目录框架00">
+                <img id="toc-dynamic-00" src="./assets/images/TableofContents/Dynamic elements/Dynamic-00.gif" alt="动态元素00">
                 <img id="toc-element-00" src="./assets/images/TableofContents/Element00-1.png" alt="目录元素00">
             </div>
         </div>
