feat: add toc-element-01 and adjust element positioning
Add new table of contents element and adjust positioning of existing elements
to improve visual hierarchy and spacing in the layout

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
                 <img id="toc-frame-00" src="./assets/images/TableofContents/frame00.png" alt="目录框架00">
                 <img id="toc-dynamic-00" src="./assets/images/TableofContents/Dynamic elements/Dynamic-00.gif" alt="动态元素00">
                 <img id="toc-element-00" src="./assets/images/TableofContents/Element00-1.png" alt="目录元素00">
+                <img id="toc-element-01" src="./assets/images/TableofContents/Element00-2.png" alt="目录元素01">
             </div>
         </div>
         <div id="section-2" class="section">
