feat(ui): add button container with grid layout for table of contents
Position button container below existing elements and style with responsive grid

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,14 @@
                 <img id="toc-dynamic-00" src="./assets/images/TableofContents/Dynamic elements/Dynamic-00.gif" alt="动态元素00">
                 <img id="toc-element-00" src="./assets/images/TableofContents/Element00-1.png" alt="目录元素00">
                 <img id="toc-element-01" src="./assets/images/TableofContents/Element00-2.png" alt="目录元素01">
+                <div class="button-container">
+                    <img src="./assets/images/TableofContents/Button (Not Selected)/01-1.png" alt="按钮01">
+                    <img src="./assets/images/TableofContents/Button (Not Selected)/02-1.png" alt="按钮02">
+                    <img src="./assets/images/TableofContents/Button (Not Selected)/03-1.png" alt="按钮03">
+                    <img src="./assets/images/TableofContents/Button (Not Selected)/04-1.png" alt="按钮04">
+                    <img src="./assets/images/TableofContents/Button (Not Selected)/05-1.png" alt="按钮05">
+                    <img src="./assets/images/TableofContents/Button (Not Selected)/06-1.png" alt="按钮06">
+                </div>
             </div>
         </div>
         <div id="section-2" class="section">
