feat(button): add button handler for toggle states
Implement button handler class to manage button selection states with mouse events
Add data attributes for selected state images in HTML
Include button handler script in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
                 <img id="toc-element-00" src="./assets/images/TableofContents/Element00-1.png" alt="目录元素00">
                 <img id="toc-element-01" src="./assets/images/TableofContents/Element00-2.png" alt="目录元素01">
                 <div class="button-container">
-                    <img src="./assets/images/TableofContents/Button (Not Selected)/01-1.png" alt="按钮01">
-                    <img src="./assets/images/TableofContents/Button (Not Selected)/02-1.png" alt="按钮02">
-                    <img src="./assets/images/TableofContents/Button (Not Selected)/03-1.png" alt="按钮03">
-                    <img src="./assets/images/TableofContents/Button (Not Selected)/04-1.png" alt="按钮04">
-                    <img src="./assets/images/TableofContents/Button (Not Selected)/05-1.png" alt="按钮05">
-                    <img src="./assets/images/TableofContents/Button (Not Selected)/06-1.png" alt="按钮06">
+                    <img id="button-01" src="./assets/images/TableofContents/Button (Not Selected)/01-1.png" alt="按钮01" data-selected-src="./assets/images/TableofContents/Button (Selected)/01.png">
+                    <img id="button-02" src="./assets/images/TableofContents/Button (Not Selected)/02-1.png" alt="按钮02" data-selected-src="./assets/images/TableofContents/Button (Selected)/02.png">
+                    <img id="button-03" src="./assets/images/TableofContents/Button (Not Selected)/03-1.png" alt="按钮03" data-selected-src="./assets/images/TableofContents/Button (Selected)/03.png">
+                    <img id="button-04" src="./assets/images/TableofContents/Button (Not Selected)/04-1.png" alt="按钮04" data-selected-src="./assets/images/TableofContents/Button (Selected)/04.png">
+                    <img id="button-05" src="./assets/images/TableofContents/Button (Not Selected)/05-1.png" alt="按钮05" data-selected-src="./assets/images/TableofContents/Button (Selected)/05.png">
+                    <img id="button-06" src="./assets/images/TableofContents/Button (Not Selected)/06-1.png" alt="按钮06" data-selected-src="./assets/images/TableofContents/Button (Selected)/06.png">
                 </div>
             </div>
         </div>
@@ -43,5 +43,6 @@
     
     <!-- 仅保留渲染进程需要的脚本 -->
     <script src="./js/animation.js"></script>
+    <script src="./js/buttonHandler.js"></script>
 </body>
 </html>
