feat: enhance UI with background and section elements
- Add background image and adjust styling for better visibility
- Add frame and title images to all content sections
- Make window non-resizable and remove dev tools logic

--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,24 @@
             </div>
         </div>
         <div id="section-2" class="section">
-            <!-- 第二区域 - 宽度约占总宽度的22.1% -->
+            <!-- 机构设置区 - 宽度约占总宽度的22.1%（第一个内容区） -->
+            <img id="zone01-frame-01" src="./assets/images/Zone01/General elements/frame01.png" alt="区域01框架01">
+            <img id="zone01-title-01" src="./assets/images/Zone01/General elements/Title01.png" alt="区域01标题01">
         </div>
         <div id="section-3" class="section">
-            <!-- 第三区域 - 宽度约占总宽度的22.1% -->
+            <!-- 第二内容区 - 宽度约占总宽度的22.1%（工作职责与工作制度） -->
+            <img id="zone02-frame-02" src="./assets/images/Zone02/General elements/frame02.png" alt="区域02框架02">
+            <img id="zone02-title-02" src="./assets/images/Zone02/General elements/Title02.png" alt="区域02标题02">
         </div>
         <div id="section-4" class="section">
-            <!-- 第四区域 - 宽度约占总宽度的22.1% -->
+            <!-- 第三内容区 - 宽度约占总宽度的22.1% -->
+            <img id="zone03-frame-01" src="./assets/images/Zone03/General elements/frame01.png" alt="区域03框架01">
+            <img id="zone03-title-03" src="./assets/images/Zone03/General elements/Title03.png" alt="区域03标题03">
         </div>
         <div id="section-5" class="section">
-            <!-- 第五区域 - 宽度约占总宽度的22.1% -->
+            <!-- 第四内容区 - 宽度约占总宽度的22.1% -->
+            <img id="zone04-frame-01" src="./assets/images/Zone04/General elements/frame01.png" alt="区域04框架01">
+            <img id="zone04-title-04" src="./assets/images/Zone04/General elements/Title04.png" alt="区域04标题04">
         </div>
     </div>
     
