docs: update comments and README with mode details
Add descriptive comments to HTML sections and document the six display modes in README

--- a/src/index.html
+++ b/src/index.html
@@ -38,12 +38,12 @@
             <img id="zone02-title-02" src="./assets/images/Zone02/General elements/Title02.png" alt="区域02标题02">
         </div>
         <div id="section-4" class="section">
-            <!-- 第三内容区 - 宽度约占总宽度的22.1% -->
+            <!-- 第三内容区 - 宽度约占总宽度的22.1%（工作成果） -->
             <img id="zone03-frame-01" src="./assets/images/Zone03/General elements/frame01.png" alt="区域03框架01">
             <img id="zone03-title-03" src="./assets/images/Zone03/General elements/Title03.png" alt="区域03标题03">
         </div>
         <div id="section-5" class="section">
-            <!-- 第四内容区 - 宽度约占总宽度的22.1% -->
+            <!-- 第四内容区 - 宽度约占总宽度的22.1%（工作亮点） -->
             <img id="zone04-frame-01" src="./assets/images/Zone04/General elements/frame01.png" alt="区域04框架01">
             <img id="zone04-title-04" src="./assets/images/Zone04/General elements/Title04.png" alt="区域04标题04">
         </div>
