feat(ui): adjust styles and add default button selection logic
- Modify width and font size in styles.css for better responsiveness
- Improve text layout with justified alignment and proper line spacing
- Add script to set default button and handle mode changes dynamically

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,13 @@
                 <img id="toc-dynamic-00" src="./assets/images/TableofContents/Dynamic elements/Dynamic-00.gif" alt="动态元素00">
                 <img id="toc-element-00" src="./assets/images/TableofContents/Element00-1.png" alt="目录元素00">
                 <img id="toc-element-01" src="./assets/images/TableofContents/Element00-2.png" alt="目录元素01">
+                
+                <!-- 安全生产委员会模式默认显示内容 -->
+                <div id="mode-content" class="mode-content">
+                    <h1 id="mode-title" class="mode-title">安全生产委员会</h1>
+                    <p id="mode-description" class="mode-description">广西壮族自治区安全生产委员会是自治区人民政府议事协调机构，必须坚持以习近平新时代中国特色社会主义思想为指导，树牢"四个意识"，坚定"四个自信"，坚决做到"两个维护"，认真贯彻落实习近平总书记关于安全生产的重要论述和指示批示精神，认真贯彻落实党中央、国务院和自治区党委、自治区人民政府安全生产方面的方针政策和重大决策部署。</p>
+                </div>
+                
                 <div class="button-container">
                     <img id="button-01" src="./assets/images/TableofContents/Button (Not Selected)/01-1.png" alt="按钮01" data-selected-src="./assets/images/TableofContents/Button (Selected)/01.png">
                     <img id="button-02" src="./assets/images/TableofContents/Button (Not Selected)/02-1.png" alt="按钮02" data-selected-src="./assets/images/TableofContents/Button (Selected)/02.png">
