修复CSP问题并实现按钮切换功能

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
                     <img id="button-05" src="./assets/images/TableofContents/Button (Not Selected)/05-1.png" alt="按钮05" data-selected-src="./assets/images/TableofContents/Button (Selected)/05.png">
                     <img id="button-06" src="./assets/images/TableofContents/Button (Not Selected)/06-1.png" alt="按钮06" data-selected-src="./assets/images/TableofContents/Button (Selected)/06.png">
                 </div>
+                
+                <!-- 引入外部初始化脚本 -->
+                <script src="./js/init.js"></script>
             </div>
         </div>
         <div id="section-2" class="section">
