refactor: simplify dev tools opening logic and update initialization
- Remove environment variable check for dev tools, now opens automatically in debug mode
- Rename app.js to init.js in HTML to better reflect its purpose
- Update README with GIF animation optimization details

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
     <script src="./js/testBackgroundSize.js"></script>
     <!-- Canvas背景渲染 -->
     <script src="./js/canvasBackground.js"></script>
-    <!-- 主应用逻辑 -->
-    <script src="./js/app.js"></script>
+    <!-- 初始化脚本 -->
+    <script src="./js/init.js"></script>
 </body>
 </html>
