fix(canvasBackground): 修复GIF动画持续循环播放问题
- 解决了“播放一次就停”的关键问题，修复事件绑定时序确保GIF持续循环播放
- 实现智能状态检查区分初始加载与重置加载，避免状态冲突
- 采用延迟设置src属性策略，确保事件绑定完成后再加载GIF
- 为每个GIF设置不同的随机重置间隔，避免同时重置引起的动画跳动
- 移除旧的超时保护代码，简化重置逻辑并提升稳定性
- 调整GIF缩放和位置微调改善显示效果
- 新增模式内容管理器初始化及默认内容设置，提升页面初始状态控制
- 在README添加开发经验文档链接，详细记录GIF循环播放问题及解决方案

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,7 @@
     <!-- 仅保留渲染进程需要的脚本 -->
     <script src="./js/animation.js"></script>
     <script src="./js/buttonHandler.js"></script>
+    <script src="./js/modeContentManager.js"></script>
     <script src="./js/backgroundManager.js"></script>
     <!-- 背景元素测试脚本 -->
     <script src="./js/testBackgroundSize.js"></script>
